--- a/src/app/about/pages/about/about.component.html
+++ b/src/app/about/pages/about/about.component.html
@@ -9,21 +9,21 @@
 </header>
 
 <!-- Contenido principal -->
-<main class="container">
-  <div class="row">
-      <div class="col-lg-6">
+<main class="container d-flex flex-wrap justify-content-center align-items-center">
+
+      <div  id="texto">
           <h2>Nuestra Historia</h2>
           <p>
-              En Vitaminas Animal, nos dedicamos a proporcionar productos de alta calidad que contribuyan al bienestar de tus mascotas.
+              En INDUQUIM SAC, nos dedicamos a proporcionar productos de alta calidad que contribuyan al bienestar de tus animales o mascotas.
           </p>
           <p>
               Fundada en el año XXXX, nuestra empresa ha crecido gracias a la confianza de nuestros clientes y a la dedicación de nuestro equipo.
           </p>
       </div>
-      <div class="col-lg-6">
+      <div>
         <img src="../../../../assets/img/animales/cuy.jpg">
       </div>
-  </div>
+
 
 </main>
 
