--- a/src/app/producto/pages/producto/producto.component.html
+++ b/src/app/producto/pages/producto/producto.component.html
@@ -66,4 +66,5 @@
         <pagination-controls (pageChange)="pages = $event"  class="my-pagination"></pagination-controls>
     </div>
   </div>
+  <app-footer></app-footer>
 </mat-sidenav-container>
