--- a/src/app/contact/pages/contact/contact.component.css
+++ b/src/app/contact/pages/contact/contact.component.css
@@ -30,7 +30,7 @@ hr{
   padding: 1%;
   z-index: 2;
   width: 23vw;
-  height: 250px;
+  height: 270px;
   background-color: white;
   box-shadow: 6px 20px 10px rgb(119, 113, 113);
   margin: 3%;
@@ -39,7 +39,7 @@ hr{
   min-width: 250px;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-around;
   align-items: center;
 }
 #contact-form{
@@ -56,4 +56,13 @@ hr{
 }
 .form-floating{
   width: 86%;
+}
+h3{
+  color: #24aff4;
+}
+p{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
 }
