--- a/src/app/shared/banner/banner.component.html
+++ b/src/app/shared/banner/banner.component.html
@@ -1,13 +1,15 @@
 <div id="banner" class="d-flex flex-column text-center align-items-center">
-    <div class="row d-flex justify-content-center align-items-center" id="banner-descripcion">
+    <div class="d-flex flex-column justify-content-center align-items-center" id="banner-descripcion">
 
         <div id="banner-texto">
             <h2>Bienvenido a </h2>
             <h1>INDUQUIM S.A.C</h1>
             <hr id="linea">
             <p class="lead">Ofrecemos vitaminas de alta calidad para <br> mejorar la salud y bienestar de tus animales.</p>
-            <a href="#productos" class="btn btn-primary btn-lg">Ver Más</a>
-        </div>
 
+        </div>
+        <div class="m-1">
+          <a  [routerLink]="['/producto']" class="btn btn-primary btn-lg">Ver Más</a>
+        </div>
     </div>
 </div>
