--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,12 +1,11 @@
 <footer class="page-footer shadow">
   <div
     class="d-flex flex-wrap justify-content-between align-items-center mx-auto py-4"
-    style="width: 80%"
+    style="width: 90%; margin-right: 7%!important;"
   >
     <div class="d-flex flex-wrap align-items-center">
       <a href="/#" class="d-flex align-items-center p-0 text-dark">
-        <img alt="logo" src="../../../assets/img/logo.png"/>
-        <span class="ms-4 h5 mb-0 font-weight-bold">INDUQUIM</span>
+        <img alt="logo" src="../../../assets/img/logo.png" id="img-banner">
       </a>
       <span
         style="
