--- a/src/app/shared/main/main.component.css
+++ b/src/app/shared/main/main.component.css
@@ -48,6 +48,7 @@ h1{
   width: 500px;
   max-width: 200px;
   min-width: 250px;
+  height: 350px;
   min-height: 300px;
   display: flex;
   flex-direction: column;
@@ -142,7 +143,7 @@ h4{
   box-shadow: -5px 14px 10px rgb(119, 113, 113);
 }
 .contenedor{
-  min-height: 65vh;
+  /*min-height: 65vh;*/
   width: 90vw;
 }
 #contenedor1{
@@ -159,6 +160,7 @@ background-color: #d2d2d3;
   height: 400px;
 }*/
 #carouselExampleIndicators{
+  margin-top: 14vh;
   margin-bottom: none;
 }
 #all-products{
@@ -211,8 +213,10 @@ mat-card-subtitle{
   align-items: center;
   overflow: initial;
 }
-.carousel-item{
+.item{
   width: 100%;
   height: 80%;
   margin-top: 10%;
 }
+
+
