--- a/src/app/shared/nav-bar-blue/nav-bar-blue.component.css
+++ b/src/app/shared/nav-bar-blue/nav-bar-blue.component.css
@@ -7,8 +7,8 @@
   src: url("../../../assets/fonts/sqr721bi.ttf");
 }
 @font-face {
-  font-family: SquareReg;
-  src: url("../../../assets/fonts/Typo_Square_Regular.otf");
+  font-family: SquareDn;
+  src: url("../../../assets/fonts/sqr721dn.ttf");
 }
 nav {
   background-color: #24aff4 !important;
@@ -26,7 +26,7 @@ nav {
 
 a {
   color: white;
-  font-family: SquareReg;
+  font-family: SquareDn;
   font-size: 17px;
   font-weight: bold;
 }
