--- a/src/app/shared/nav-bar/nav-bar.component.css
+++ b/src/app/shared/nav-bar/nav-bar.component.css
@@ -10,6 +10,10 @@
   font-family: SquareDn;
   src: url("../../../assets/fonts/sqr721dn.ttf");
 }
+@font-face {
+  font-family: SquareRegular;
+  src: url("../../../assets/fonts/Typo_Square_Regular.otf");
+}
 nav{
   background-color: white !important;
   position: fixed;
@@ -19,9 +23,8 @@ nav{
 }
 a{
   color: black;
-  font-family: SquareDn;
+  font-family: SquareRegular;
   font-size: 17px;
-  font-weight: bold;
 }
 a:hover{
   color: rgb(160, 153, 153);
